--- a/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
+++ b/xamoom-pingeborg-ios/xamoom-pingeborg-ios/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xLe-gR-03r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14C1510" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="xLe-gR-03r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -30,8 +30,8 @@
             <objects>
                 <viewController id="TrX-Pn-Qt4" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ywW-Eh-ZcL"/>
-                        <viewControllerLayoutGuide type="bottom" id="wCw-mH-JX8"/>
+                        <viewControllerLayoutGuide type="top" id="tne-SS-UgB"/>
+                        <viewControllerLayoutGuide type="bottom" id="G4e-kZ-dKF"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="igY-0I-V2N">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -49,36 +49,35 @@
             <objects>
                 <viewController id="g8c-6b-oU9" customClass="ScanResultViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Z0U-oo-y1q"/>
-                        <viewControllerLayoutGuide type="bottom" id="aIP-f4-IDE"/>
+                        <viewControllerLayoutGuide type="top" id="Amh-QJ-HKK"/>
+                        <viewControllerLayoutGuide type="bottom" id="Kdb-S8-7Bo"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="4gp-YQ-mv2">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jze-UN-4mA">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jze-UN-4mA">
                                 <rect key="frame" x="16" y="72" width="568" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="fXT-Zj-KrE"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZXf-ZN-lsM">
-                                <rect key="frame" x="16" y="125" width="568" height="222"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZXf-ZN-lsM">
+                                <rect key="frame" x="16" y="125" width="568" height="254"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="trailing" secondItem="4gp-YQ-mv2" secondAttribute="trailingMargin" id="7Zp-J4-n0G"/>
-                            <constraint firstItem="Jze-UN-4mA" firstAttribute="trailing" secondItem="4gp-YQ-mv2" secondAttribute="trailingMargin" id="7aa-UE-eQe"/>
-                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="top" secondItem="Jze-UN-4mA" secondAttribute="bottom" constant="8" id="94W-SR-XNw"/>
-                            <constraint firstItem="Jze-UN-4mA" firstAttribute="leading" secondItem="4gp-YQ-mv2" secondAttribute="leadingMargin" id="ESZ-yC-1LJ"/>
-                            <constraint firstItem="Jze-UN-4mA" firstAttribute="leading" secondItem="4gp-YQ-mv2" secondAttribute="leadingMargin" id="PMK-24-jWc"/>
-                            <constraint firstItem="Jze-UN-4mA" firstAttribute="trailing" secondItem="4gp-YQ-mv2" secondAttribute="trailingMargin" id="PZr-Qm-LQn"/>
-                            <constraint firstItem="aIP-f4-IDE" firstAttribute="top" secondItem="ZXf-ZN-lsM" secondAttribute="bottom" constant="204" id="R7V-0Q-SSJ"/>
-                            <constraint firstItem="Jze-UN-4mA" firstAttribute="top" secondItem="Z0U-oo-y1q" secondAttribute="bottom" constant="8" id="UaG-3N-hlT"/>
-                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="leading" secondItem="4gp-YQ-mv2" secondAttribute="leadingMargin" id="oI9-I2-vhZ"/>
-                            <constraint firstItem="Jze-UN-4mA" firstAttribute="top" secondItem="Z0U-oo-y1q" secondAttribute="bottom" constant="8" id="oey-Rg-UHR"/>
-                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="top" secondItem="Jze-UN-4mA" secondAttribute="bottom" constant="8" id="v6M-xO-qHI"/>
+                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="trailing" secondItem="4gp-YQ-mv2" secondAttribute="trailingMargin" id="6Uy-V8-I7y"/>
+                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="top" secondItem="Jze-UN-4mA" secondAttribute="bottom" constant="8" symbolic="YES" id="CGj-KI-DHU"/>
+                            <constraint firstItem="Kdb-S8-7Bo" firstAttribute="top" secondItem="ZXf-ZN-lsM" secondAttribute="bottom" constant="172" id="LfO-Sd-lKz"/>
+                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="leading" secondItem="4gp-YQ-mv2" secondAttribute="leadingMargin" id="NEW-tj-Fef"/>
+                            <constraint firstItem="Jze-UN-4mA" firstAttribute="top" secondItem="Amh-QJ-HKK" secondAttribute="bottom" constant="8" symbolic="YES" id="fdX-c7-wXl"/>
+                            <constraint firstItem="ZXf-ZN-lsM" firstAttribute="leading" secondItem="Jze-UN-4mA" secondAttribute="leading" id="jkF-Qq-mRn"/>
+                            <constraint firstItem="Jze-UN-4mA" firstAttribute="trailing" secondItem="ZXf-ZN-lsM" secondAttribute="trailing" id="nkT-gv-R04"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="pingeb.org" id="M96-y9-eDA">
@@ -91,15 +90,59 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m6r-7N-IFa" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1283" y="1756"/>
+            <point key="canvasLocation" x="289" y="1267"/>
+        </scene>
+        <!--pingeb.org-->
+        <scene sceneID="5WF-ex-a2S">
+            <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="twR-Cm-8K5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <viewController id="PQH-Gt-PqN" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="qH4-if-dtc"/>
+                        <viewControllerLayoutGuide type="bottom" id="Lro-OS-QOb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="TfH-Gh-1yT">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1VY-cy-w9q">
+                                <rect key="frame" x="16" y="72" width="568" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="toq-3f-j8U"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hrc-Wg-Ynb">
+                                <rect key="frame" x="16" y="125" width="568" height="254"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="1VY-cy-w9q" firstAttribute="top" secondItem="qH4-if-dtc" secondAttribute="bottom" constant="8" symbolic="YES" id="45I-w1-qwx"/>
+                            <constraint firstItem="hrc-Wg-Ynb" firstAttribute="trailing" secondItem="TfH-Gh-1yT" secondAttribute="trailingMargin" id="98y-GE-TfU"/>
+                            <constraint firstItem="hrc-Wg-Ynb" firstAttribute="top" secondItem="1VY-cy-w9q" secondAttribute="bottom" constant="8" symbolic="YES" id="H4b-7W-ZRr"/>
+                            <constraint firstItem="1VY-cy-w9q" firstAttribute="trailing" secondItem="hrc-Wg-Ynb" secondAttribute="trailing" id="YVi-Rf-tUr"/>
+                            <constraint firstItem="hrc-Wg-Ynb" firstAttribute="leading" secondItem="TfH-Gh-1yT" secondAttribute="leadingMargin" id="gPN-BA-hH1"/>
+                            <constraint firstItem="Lro-OS-QOb" firstAttribute="top" secondItem="hrc-Wg-Ynb" secondAttribute="bottom" constant="172" id="j8r-c4-jcj"/>
+                            <constraint firstItem="hrc-Wg-Ynb" firstAttribute="leading" secondItem="1VY-cy-w9q" secondAttribute="leading" id="uwq-Bp-tiK"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="pingeb.org" id="Bqi-dy-1g0">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="vSo-o2-DJd"/>
+                    </navigationItem>
+                </viewController>
+            </objects>
+            <point key="canvasLocation" x="1011" y="1267"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="qEf-v5-WpB">
             <objects>
                 <viewController id="wda-of-8Qb" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="hAp-rX-tg1"/>
-                        <viewControllerLayoutGuide type="bottom" id="4uI-RW-hYl"/>
+                        <viewControllerLayoutGuide type="top" id="ype-wx-0oP"/>
+                        <viewControllerLayoutGuide type="bottom" id="ntR-gj-hWM"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="bKd-Ua-hIb" customClass="QRCodeReaderView">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -110,15 +153,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GHE-vJ-7Mb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2193" y="-154"/>
+            <point key="canvasLocation" x="2193" y="-153.99999999999997"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="RRn-VI-kmy">
             <objects>
                 <viewController id="evs-Oh-Jun" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="Ylb-oj-KWS"/>
-                        <viewControllerLayoutGuide type="bottom" id="3SE-fl-HgP"/>
+                        <viewControllerLayoutGuide type="top" id="ORa-fX-SH4"/>
+                        <viewControllerLayoutGuide type="bottom" id="6rg-Jx-dpP"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="QE4-ny-WZo">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
@@ -131,24 +174,39 @@
             </objects>
             <point key="canvasLocation" x="2193" y="589"/>
         </scene>
-        <!--View Controller-->
+        <!--Start View Controller-->
         <scene sceneID="6vr-Da-59E">
             <objects>
-                <viewController id="yb1-AW-VOp" sceneMemberID="viewController">
+                <viewController id="yb1-AW-VOp" customClass="StartViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="u79-GR-Ytd"/>
-                        <viewControllerLayoutGuide type="bottom" id="gcc-c2-ZsA"/>
+                        <viewControllerLayoutGuide type="top" id="V8L-BV-L4q"/>
+                        <viewControllerLayoutGuide type="bottom" id="5Xz-sH-L58"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="gJa-l2-6vM">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" indicatorStyle="white" translatesAutoresizingMaskIntoConstraints="NO" id="C1d-xc-YTh">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="C1d-xc-YTh" secondAttribute="trailing" id="Ksp-3g-BTR"/>
+                            <constraint firstItem="C1d-xc-YTh" firstAttribute="leading" secondItem="gJa-l2-6vM" secondAttribute="leading" id="gGx-GI-JYd"/>
+                            <constraint firstItem="C1d-xc-YTh" firstAttribute="top" secondItem="gJa-l2-6vM" secondAttribute="top" id="hQy-ph-usd"/>
+                            <constraint firstAttribute="bottom" secondItem="C1d-xc-YTh" secondAttribute="bottom" id="vYF-2O-tRZ"/>
+                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" image="Start" id="9eT-Sx-qQ9"/>
+                    <connections>
+                        <outlet property="scrollView" destination="C1d-xc-YTh" id="pnY-lf-AK3"/>
+                        <outlet property="view" destination="gJa-l2-6vM" id="BAs-pt-dcl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zh6-Vk-TxC" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1477" y="-154"/>
+            <point key="canvasLocation" x="1475" y="-155"/>
         </scene>
         <!--pingeborg.org-->
         <scene sceneID="dSe-9y-ton">
@@ -166,7 +224,8 @@
                         <segue destination="TrX-Pn-Qt4" kind="relationship" relationship="viewControllers" id="eUh-Xe-XpM"/>
                         <segue destination="wda-of-8Qb" kind="relationship" relationship="viewControllers" id="95r-xL-Jxf"/>
                         <segue destination="evs-Oh-Jun" kind="relationship" relationship="viewControllers" id="7Z6-7b-f6d"/>
-                        <segue destination="g8c-6b-oU9" kind="push" identifier="showScanResult" id="TM5-d9-Bxu"/>
+                        <segue destination="g8c-6b-oU9" kind="show" identifier="showScanResult" id="TM5-d9-Bxu"/>
+                        <segue destination="PQH-Gt-PqN" kind="show" id="3ye-kq-kaq"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nmp-ce-SUF" userLabel="First Responder" sceneMemberID="firstResponder"/>
